# vypr

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
crates/error/src/: error.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  parser.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: analyzer.rs  lib.rs  methods.rs  scope.rs
crates/vm/: Cargo.toml
crates/vm/src/: builtins.rs  bytecode.rs  compiler.rs  lib.rs  methods.rs  serializer.rs  value.rs  vm.rs
